--- a/LinearLayout/app/src/main/res/values/colors.xml
+++ b/LinearLayout/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorHitam">#000000</color>
+    <color name="colorMerah">#FF0100</color>
+    <color name="colorKuning">#FFF700</color>
 </resources>
