--- a/ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,53 @@
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
 
-	<TextView
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:orientation="horizontal"
+		app:layout_constraintStart_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="parent" >
+
+		<LinearLayout
+			android:layout_width="210dp"
+			android:layout_height="match_parent"
+			android:background="@color/colorMerah"
+			android:orientation="horizontal">
+
+			<Button
+				android:id="@+id/button3"
+				android:layout_width="wrap_content"
+				android:layout_height="362dp"
+				android:layout_weight="1"
+				android:text="Button" />
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:background="@color/colorPutih"
+			android:orientation="horizontal">
+
+			<Button
+				android:id="@+id/button4"
+				android:layout_width="wrap_content"
+				android:layout_height="368dp"
+				android:layout_weight="1"
+				android:text="Button" />
+		</LinearLayout>
+	</LinearLayout>
+
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline7"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="Hello World!"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+		android:orientation="vertical"
+		app:layout_constraintGuide_percent="0.5" />
 
+	<androidx.constraintlayout.widget.Guideline
+		android:id="@+id/guideline8"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal"
+		app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
