--- a/MusicPlayer/app/src/main/res/values/colors.xml
+++ b/MusicPlayer/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBB">#000057</color>
+    <color name="colorT">#F2F8FF</color>
 </resources>
