--- a/Aplikasiku/app/src/main/res/layout/activity_main.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,25 @@
 	tools:context=".MainActivity">
 
 	<ImageView
-		android:id="@+id/imageView2"
-		android:layout_width="100dp"
-		android:layout_height="100dp"
+		android:id="@+id/imageView"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		app:srcCompat="@mipmap/ic_launcher_round" />
+		app:srcCompat="@mipmap/ic_logo" />
 
 	<TextView
 		android:id="@+id/textView"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="8dp"
-		android:text="malangCreative Application"
-		android:textSize="20dp"
-		android:textColor="@color/colorB"
+		android:text="Malang Creative"
+		android:textSize="30dp"
 		android:fontFamily="@font/montserrat_semi_bold"
 		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.497"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+		app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
