--- a/Aplikasiku/app/src/main/res/layout/activity_success_reset_password.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_success_reset_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -19,9 +19,11 @@
 		android:id="@+id/txt_success"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginTop="44dp"
 		android:fontFamily="@font/montserrat_semi_bold"
-		android:text="Successful!!"
+		android:text="@string/successful"
 		android:textSize="32sp"
+		app:layout_constraintHorizontal_bias="0.497"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent"
 		app:layout_constraintTop_toTopOf="@+id/guideline" />
@@ -30,9 +32,11 @@
 		android:id="@+id/success_image"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="8dp"
+		android:layout_marginBottom="40dp"
+		android:contentDescription="@string/todo"
 		android:src="@mipmap/ic_succesfull_logo"
-		app:layout_constraintBottom_toTopOf="@+id/txt_success"
+		app:layout_constraintBottom_toTopOf="@+id/guideline"
+		app:layout_constraintHorizontal_bias="0.497"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintRight_toRightOf="parent" />
 
@@ -43,7 +47,7 @@
 		android:layout_marginLeft="24dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginRight="24dp"
-		android:text="Reset Password Anda telah Sukses. SIlahkan Login dengan Password Baru Anda"
+		android:text="@string/reset_password_anda_telah_sukses_silahkan_login_dengan_password_baru_anda"
 		android:textAlignment="center"
 		android:textSize="16sp"
 		app:layout_constraintLeft_toLeftOf="parent"
