--- a/Aplikasiku/app/src/main/res/layout/activity_welcome.xml
+++ b/Aplikasiku/app/src/main/res/layout/activity_welcome.xml
@@ -12,7 +12,7 @@
 		android:id="@+id/imageView2"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="28dp"
+		android:layout_marginTop="24dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
 		android:text="Selamat Datang Di Malang Creative"
-		android:textSize="20dp"
+		android:textSize="15dp"
 		android:fontFamily="@font/montserrat_semi_bold"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
@@ -36,20 +36,21 @@
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/montserrat_light"
 		android:text="Sudah Punya Rencana Travelling ?"
-		android:textSize="20dp"
+		android:textSize="15dp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintHorizontal_bias="0.492"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 	<ImageView
-		android:id="@+id/imageView4"
-		android:layout_width="445dp"
-		android:layout_height="314dp"
+		android:id="@+id/background_satu"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:scaleType="fitXY"
+		android:src="@mipmap/bg_red"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:srcCompat="@mipmap/bg_red" />
+		app:layout_constraintStart_toStartOf="parent" />
 
 	<TextView
 		android:id="@+id/login_text"
@@ -63,6 +64,7 @@
 		android:text="Login"
 		android:textSize="18sp"
 		android:fontFamily="@font/montserrat_light"
+		android:onClick="clickLogin"
 		/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
